[package]
name = "eternal-os"
version = "0.1.0"
authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "eternal-os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
mpu6050 = {path = "mpu6050"}

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
