[package]
name = "eternal-os"
version = "0.1.0"
authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "eternal-os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
api = {path = "api"}
sys = {path = "sys"}

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["arduino-uno"]

# Configure the build for the target microcontroller
[features]
default = ["arduino-uno"]
arduino-uno = []
arduino-nano = []
arduino-mega2560 = []
sparkfun-promicro = []

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
