[package]
name = "api"
version = "0.1.0"
authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"

[dependencies.math]
path = "../math"

[dependencies.sys]
path = "../sys"

[dependencies.embedded-nrf24l01]
path = "./src/rf"