[package]
name = "drivers"
version = "0.1.0"
authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
math = {path = "../math"}
vec = {path = "../vec"}